# bbsify-landed-model-generator

./: .gitignore  Cargo.toml  README.md  build.rs  crates.js  help.html  index.html  mg.code-workspace  search-index.js  settings.html  src-files.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  docs.yml  examples.yml  rust.yml
benches/: transform_benchmarks.rs
doc_generator/: all.html  fn.extract_example_description.html  fn.extract_example_title.html  fn.extract_example_usage.html  fn.extract_package_name.html  fn.extract_toml_value.html  fn.generate_examples_markdown.html  fn.generate_markdown_content.html  fn.main.html  index.html  sidebar-items.js
examples/: advanced_transforms.md  advanced_transforms.rs  all_transforms.md  all_transforms.rs  basic_cube.md  basic_cube.rs  basic_transforms.md  basic_transforms.rs  complex_model.md  complex_model.rs  deform_transforms.md  deform_transforms.rs  index.md  projection_transforms.md  projection_transforms.rs
examples/output/: complex_model.mtl
mg/: all.html  enum.Error.html  index.html  struct.Model.html  trait.Transform.html  type.Result.html
mg/exporters/: index.html
mg/plugin/: index.html  sidebar-items.js  struct.CompositePlugin.html  struct.PluginRegistry.html  struct.SmoothNormalsPlugin.html  struct.TransformPlugin.html  trait.Plugin.html
mg/primitives/: index.html  struct.Cube.html  struct.Cylinder.html  struct.Sphere.html
mg/transforms/: index.html  sidebar-items.js
mg/types/: enum.TextureType.html  index.html  struct.Face.html  struct.Material.html  struct.Mesh.html  struct.Vertex.html
model_generator/: all.html  enum.Error.html  fn.create_cube.html  fn.create_cylinder.html  fn.create_sphere.html  fn.export_model.html  fn.main.html  fn.parse_rotation.html  fn.parse_vector3.html  fn.print_usage.html  index.html  sidebar-items.js  struct.Model.html  trait.Transform.html  type.Result.html
model_generator/exporters/: index.html  sidebar-items.js
model_generator/plugin/: index.html  struct.CompositePlugin.html  struct.PluginRegistry.html  struct.SmoothNormalsPlugin.html  trait.Plugin.html  (+1 more)
src/: lib.rs  plugin.rs  primitives.rs  transforms.rs  types.rs
tests/: test_core.rs  test_exporters.rs  test_plugins.rs  test_primitives.rs  test_transforms.rs
(+186 files in other folders)
