[package]
name = "model-generator"
version = "0.1.0"
edition = "2021"
description = "A library for programmatically generating 3D models through transformations and plugins"
authors = ["bbsify <leon@bbsify.com>"]
license = "MIT"
repository = "https://github.com/bbsify-landed/bbsify-landed-model-generator"
documentation = "https://docs.rs/model-generator"
readme = "README.md"
keywords = ["3d", "model", "generator", "geometry", "graphics"]
categories = ["graphics", "rendering", "game-development"]

[dependencies]
# Core functionality
nalgebra = "0.33.2"      # Linear algebra
thiserror = "1.0.69"     # Error handling
pulldown-cmark = "0.9.3" # Markdown parsing
scraper = "0.18.1"       # HTML parsing

# File format support
obj-rs = "0.7.1"                                   # OBJ format
tobj = "4.0.1"                                     # OBJ format (alternative implementation)
gltf = { version = "1.4.0", features = ["utils"] } # glTF format
stl_io = "0.7.0"                                   # STL format

[dev-dependencies]
criterion = "0.5.1" # Benchmarking

[lib]
name = "model_generator" # The name of the library
path = "src/lib.rs" # The entry point for the library
crate-type = [
    "lib",
    "cdylib",
    "staticlib",
] # Multiple crate types for different use cases
doctest = true # Enable doctests

# Binary executable
[[bin]]
name = "model-generator"            # Command-line executable name
path = "src/bin/model-generator.rs"

# Documentation generator binary
[[bin]]
name = "doc-generator"            # Documentation generator executable
path = "src/bin/doc-generator.rs"

# Examples
[[example]]
name = "basic_cube"
path = "examples/basic_cube.rs"

[[example]]
name = "complex_model"
path = "examples/complex_model.rs"

# Benchmarks
[[bench]]
name = "transform_benchmarks"
harness = false

# Integration tests are automatically discovered from the tests/ directory
# But we can explicitly define them for clarity
[[test]]
name = "core"
path = "tests/test_core.rs"

[[test]]
name = "primitives"
path = "tests/test_primitives.rs"

[[test]]
name = "transforms"
path = "tests/test_transforms.rs"

[[test]]
name = "exporters"
path = "tests/test_exporters.rs"

[[test]]
name = "plugins"
path = "tests/test_plugins.rs"
